syntax = "proto3";

package main;

service Movie {
    rpc GetMovie(GetMovieRequest) returns (GetMovieResponse) {}
}

message GetMovieRequest {
    int64 movie_id = 1;
}

message GetMovieResponse {
    int64  movie_id = 1;
    string name = 2;
    string poster = 3;
    string url = 4;
}
